--- a/src/pages/HistoricalPhotos/HistoricalPhotos.module.css
+++ b/src/pages/HistoricalPhotos/HistoricalPhotos.module.css
@@ -21,7 +21,7 @@
   align-items: center;
   margin-left: 430px;
   margin-bottom: 2rem;
-  margin-top: 7rem;
+  margin-top: 155px;
   font-size: 24px;
   color: white;
 }
@@ -179,7 +179,7 @@
     margin-left: 20px !important;
     text-align: center !important;
     font-size: 20px !important;
-    margin-top: 5rem !important;
+    margin-top: 155px !important;
   }
 
   .container {
