--- a/src/pages/Institution/Institution.module.css
+++ b/src/pages/Institution/Institution.module.css
@@ -8,7 +8,7 @@
   justify-content: center;
   color: white;
   font-size: 1.125rem;
-  padding-top: 150px;
+  padding-top: 155px;
   padding-bottom: 1.5rem;
   padding-left: 800px;
   padding-right: 0.5rem;
@@ -18,7 +18,7 @@
   font-size: 28px;
   color: var(--gray-contact);
   margin-left: -500px;
-  margin-top: -1.25rem;
+  margin-top: 0;
   white-space: nowrap;
   font-weight: bold;
 }
